# data-contract-validator

./: .contract-validator.yml  .gitignore  .pre-commit-hooks.yaml  .retl-validator.yml  CHANGELOG.md  FIELD_REPORT.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  temp_enhanced_dbt.py
.github/workflows/: publish.yml  test.yml  validate_contract.yml
.github_actions/: validate_contracts.yml
advanced/: multiple_repos.py
basic_usage/: validate.py
basic_usage/dbt_project/: dbt_project.yml
basic_usage/dbt_project/models/: users.sql
data_contract_validator/: __init__.py  cli.py  requirements.txt
data_contract_validator/.github/workflows/: publish.yml  test.yml  validate_contract.yml
data_contract_validator/core/: models.py  types.py  validator.py
data_contract_validator/extractors/: __init__.py  base.py  dbt.py  fastapi.py
examples/: .pre-commit-config.yaml
examples/advanced/: custom_extractors.py  multiple_repos.py
examples/basic_usage/: validate.py
examples/basic_usage/dbt_project/: dbt_project.yml
examples/basic_usage/dbt_project/models/: user.sql  user_profiles.sql  users.sql
examples/basic_usage/fastapi_app/: models.py
examples/directory_usage/: validate_directory.py
examples/fastapi_app/: models.py
retl_validator/: cli.py
retl_validator/core/: models.py  validator.py
retl_validator/extractors/: dbt.py  fastapi.py
reverse_etl_validator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_cli.py
tests/test_core/: test_types.py  test_validator.py
tests/test_extractors/: test_dbt.py  test_fastapi.py
